# teaching-middleware

./: .gitignore  AGENTS.md  NOTICE
src/activemq-basic-client/java/: README.md  pom.xml
src/activemq-basic-server/java/: README.md  pom.xml
src/activemq-camel-client/java/: README.md  pom.xml
src/activemq-camel-client/java-broker/: README.md  pom.xml
src/activemq-camel-client/java-client/: README.md  pom.xml
src/activemq-flow-control/java/: README.md  pom.xml
src/activemq-jndi-client/java/: README.md  pom.xml
src/activemq-jndi-server/java/: README.md  pom.xml
src/activemq-simplified-client/java/: README.md  pom.xml
src/avro-basic-usage/java/: README.md  pom.xml
src/avro-basic-usage/python/: .gitignore  README.md  example.avsc  example.py  pyproject.toml  requirements.txt
src/capnproto-basic-usage/c/: .gitignore  Makefile  README.md  example.capnp  example.cc
src/corba-basic-server/c-omniorb/: .gitignore  Makefile  README.md  client.cpp  server.cpp
src/corba-basic-server/c-tao/: .gitignore  Makefile  README.md  client.cpp  example.idl  server.cpp
src/corba-basic-server/c-taox11/: .gitignore  README.md  (+3 more)
src/grpc-open-telemetry/python/: .gitignore  README.md  client.py  pyproject.toml  requirements.txt  server.py
src/kafka-configuration/: README.md  server-0.properties  server-1.properties  server-2.properties  server-3.properties  server.properties
src/openapi-basic-application/: fetch.sh
src/serialization-compression/python/: .gitignore  README.md  compression.ipynb  pyproject.toml
src/zookeeper-configuration/: README.md  zoo.cfg
(+298 files in other folders)
